--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/js-yaml": "^3.12.5",
+    "amqplib": "^0.6.0",
     "asn": "0.0.1",
     "asn1": "^0.2.4",
     "bcrypt": "^5.0.0",
@@ -32,6 +33,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.5.13",
     "@types/bcrypt": "^3.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
